feat: added endpoint to get favicon
